turtleart.house.House.scala.error
Erreur de compilation :
House:1: error: Missing closing brace `}' assumed here
override def run() {
^House:1: error: expected start of definition
override def run() {
         ^